Adding Share Button and Favorite Button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="destinations_name">Destinations Name</string>
     <string name="destinations_detail">Destinations Detail</string>
     <string name="destinations_city">Destinations City</string>
+    <string name="add_to_favorite">Add to Favorite</string>
+    <string name="share">Share</string>
 </resources>
