Adding About Page, Adjusting the Activity Tittles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="destinations_city">Destinations City</string>
     <string name="add_to_favorite">Add to Favorite</string>
     <string name="share">Share</string>
+    <string name="about_name">Muhammad Rio Ananta Firdaus</string>
 </resources>
